# BTG

./: .pre-commit-config.yaml  Makefile  README.md  dockercompose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml
.github/workflows/: code-quality-checks.yml  pytest-workflow.yml
application/: app.py  schema_swagger.py
btg/: response.py
btg/repository/: user_repository.py
btg/serializers/: transaction.py
btg/use_case/: use_service.py
config/: pyproject.toml  script_init.sh  script_init_db.py  settings.py
dockerfile/: Dockerfile
linters_code/bandit/: bandit.yaml  bandit_config.json
linters_code/black/: pyproject.toml
linters_code/pylint/: .pylintrc
src/btg/: __init__.py
src/btg/use_case/: use_service.py
src/hello/: serverless.ms.yml
src/hello/core/: handler.py
tests/: test_response.py
tests/test_application/: test_schema_swagger.py
tests/test_repository/: test_user_repository.py
tests/test_serializers/: test_transaction.py
