[tool.poetry]
name = "btgserverless"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.9.2"
pytz = "^2024.2"
certifi = "^2024.8.30"


[tool.poetry.group.dev.dependencies]
bandit = "^1.7.10"
pylint = "^3.3.1"
pytest = "^8.3.3"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
