[tool.poetry]
name = "btg"
version = "0.1.0"
description = "btg technical test"
authors = ["sixtandev <sixtandev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.31.0"
fastapi = "^0.115.0"
pydantic = "^2.9.2"
pymongo = "^4.10.1"
pytz = "^2024.2"
pre-commit = "^4.0.0"
pydantic-settings = "^2.5.2"
twilio = "^9.3.3"


[tool.poetry.group.dev.dependencies]
bandit = "^1.7.10"
pylint = "^3.3.1"
pytest = "^8.3.3"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
